fix #game-options styles on responsive, add flex wrpa wrap and flex grow 0

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -239,10 +239,8 @@ button:focus {
   /* GAME OPTIONS */
 
   #game-options {
-    margin-top: 60px;
-    display: flex;
     flex-wrap: wrap;
-
+    flex-grow: 0;
   }
 
   .game-options-name,
